@@ -8,9 +8,9 @@
 
 #ifndef SOURCES_BL_INCLUDE_LED_CONTROL_H_
 #define SOURCES_BL_INCLUDE_LED_CONTROL_H_
-
 /**
- * @brief processes led. Led blinks depending on state.
+ * This function must be called in main while(1) cycle. It contains internal timers so it may be called
+ * at any frequency but the faster it's called, the more precision is got
  */
 void Blink_Led(void);
 
