@@ -12,10 +12,10 @@
 #include <stdint.h>
 typedef enum
 {
-	STATE_IDLE = 0, /** < Idle state. Must not occur in real life. In idle CPU sleeps */
-	STATE_START,    /** < Starting the engine */
-	STATE_COLD,     /** < Starting without fuel */
-	STATE_TOTAL     /** < Total number of states */
+	STATE_IDLE = 0, /**< Idle state. Must not occur in real life. In idle CPU sleeps */
+	STATE_START,    /**< Starting the engine */
+	STATE_COLD,     /**< Starting without fuel */
+	STATE_TOTAL     /**< Total number of states */
 } State_t;
 
 /**
